--- a/nlp.html
+++ b/nlp.html
@@ -156,7 +156,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
+<h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
       Senior AI Scientist - Deep Learning for Natural Language Processing - Covera Health
     </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -218,7 +218,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Boston, MANew York, New York San Mateo, CA  North America</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/4330353C58'>KNOREX - Jobs: Research Scientist (NLP) - Python, Java - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... to deliver the right marketing message to the right audience at the right moment 
 and right place, underpinned by a multi-layered data-driven approach. Knorex?...</p>
@@ -227,7 +227,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/777d7217-3ff0-4aae-959a-0d076a57f665'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/777d7217-3ff0-4aae-959a-0d076a57f665'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
@@ -239,7 +239,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Worthix/743999693981383-natural-language-processing-specialist'>Worthix Natural Language Processing Specialist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA Atlanta</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -247,7 +247,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -283,7 +283,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -397,7 +397,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <hr/>
-<h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
@@ -415,7 +415,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AI-Adam/743999693407080-data-scientist-nlp'>AI-Adam Data Scientist - NLP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AI-Adam/743999693407080-data-scientist-nlp'>AI-Adam Data Scientist - NLP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London, United Kingdom  London</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
@@ -423,7 +423,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gumgum/job/oAANafwR'>GumGum Careers - NLP Scientist</a></h5> 
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-08-17</p>
 <hr/>
@@ -458,7 +458,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/oN3Kafwu'>Universal Music Group Careers - Chatbot and NLP R&D Intern (4-5 Months)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -499,7 +499,7 @@ India.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/8515d4c8-ef46-4c5b-add6-b6df34de72ce'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/8515d4c8-ef46-4c5b-add6-b6df34de72ce'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
